2008-09-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* stackchk/system.h: Rename STACK_CHECKER_ON to more appropriate
	CONFIGURE_STACK_CHECKER_ENABLED.

2008-09-06	Ralf Corsépius <ralf.corsepius@rtems.org>

	* malloctest/init.c: Convert to "bool".

2008-06-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems++/System.h: Account for extra task stacks properly.

2008-02-27	Joel Sherrill <joel.sherrill@oarcorp.com>

	* malloctest/init.c: Fix return status check.

2008-01-31	Joel Sherrill <joel.sherrill@OARcorp.com>

	* cpuuse/init.c, malloctest/init.c, monitor/init.c, monitor02/init.c,
	putenvtest/init.c, rtems++/Init.cc, rtmonuse/init.c, stackchk/init.c:
	Change TEST_INIT to CONFIGURE_INIT. Make tmacros.h available to all
	POSIX tests. Add a clock_settime case for < 1988.

2008-01-31	Joel Sherrill <joel.sherrill@OARcorp.com>

	* malloctest/init.c: Add more test cases to cover heap better.

2008-01-31	Joel Sherrill <joel.sherrill@OARcorp.com>

	* malloctest/init.c: Add new test cases per Sergei. Make some of the
	stranger cases operate directly on a freshly initialized heap. This
	should make them more reproducible.

2008-01-29	Joel Sherrill <joel.sherrill@OARcorp.com>

	* malloctest/init.c: Add more tests per suggestions from Sergei
	Organov.

2008-01-24	Joel Sherrill <joel.sherrill@oarcorp.com>

	* malloctest/init.c: Add include to remove warning.

2008-01-22	Joel Sherrill <joel.sherrill@OARcorp.com>

	* malloctest/init.c: Remove debug print.

2008-01-09	Joel Sherrill <joel.sherrill@OARcorp.com>

	* monitor02/.cvsignore: New file.

2008-01-09	Jennifer Averett <jennifer.averett@OARcorp.com>

	* Makefile.am, configure.ac: Added automatic test for monitor shell
	* monitor02/Makefile.am, monitor02/init.c, monitor02/monitor02.scn,
	monitor02/system.h: New files.

2007-12-20	Joel Sherrill <joel.sherrill@OARcorp.com>

	* malloctest/init.c: Add test cases suggested by Sergei Organov
	<s.organov@javad.com>.

2007-12-19	Joel Sherrill <joel.sherrill@OARcorp.com>
