@@ -1,3 +1,8 @@
+2008-10-14	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* malloctest/init.c: Do not generate alignment factors larger that will
+	not fit in a native integer.
+
 2008-09-17	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* stackchk/system.h: Rename STACK_CHECKER_ON to more appropriate
